--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,125 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CSS Practice</title>
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>  </head>
   <body>
-    <!-- Your HTML here -->
-  </body>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Professional Running</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Get started</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Training offers
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Highschool</a></li>
+                <li><a class="dropdown-item" href="#">College</a></li>
+                <li><a class="dropdown-item" href="#">Masters</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-secondary" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+   <!-- Hero unit -->
+    <div class="container mt-5 p-5 bg-dark text-white rounded-3">
+      <h1 class="display-4">Professional running home</h1 class="display-4">
+      <p class="lead">Coaching and developing professional runners</p>
+      <a class="btn btn-darl text-white btn-lg" href="#" role="button">Pricing and Plans</a>
+    </div>
+
+    <div class="container my-5">
+      <div class="row">
+        <div class="col text-center">
+          <h2>What we offer</h2>
+        </div>
+      </div>
+      <!-- An example of Bootstrap's spacing utility classes -->
+      <!-- The "mt-4" gives you more margin on top, responsively -->
+      <div class="row mt-4">
+        <div class="col-sm-4 text-center">
+          <h1><i class="fas fa-code"></i></h1>
+          <h5>High school training</h5>
+          <p>If you're still in high school, we can help you making it to the D1 colleages!</p>
+        </div>
+        <div class="col-sm-4 text-center">
+          <h1><i class="fas fa-chart-line"></i></h1>
+          <h5>College training</h5>
+          <p>If you're a college student we can help you getting a professional contract after your college eligibility. Nike, adidas, Brooks - we will bring you there!</p>
+        </div>
+        <div class="col-sm-4 text-center">
+          <h1><i class="fas fa-code-branch"></i></h1>
+          <h5>Masters athletes</h5>
+          <p>You're old but want to hunt that sub 5 minute mile or beat your long-time rivals? No worries, we will make it happen!</p>
+        </div>
+      </div>
+    </div>
+
+    <hr class="my-4">
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <ul class="list-group">
+            <li class="list-group-item">Eliud Kipchoge</li>
+            <li class="list-group-item">Jakob Ingebrigtsen</li>
+            <li class="list-group-item">Cole Hocker</li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul class="list-group">
+            <li class="list-group-item">Stephanie Bruce</li>
+            <li class="list-group-item">Sara Hall</li>
+            <li class="list-group-item">Desiree Linden</li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul class="list-group">
+            <li class="list-group-item">Hugh Mundy</li>
+            <li class="list-group-item">Landis Huffmann</li>
+            <li class="list-group-item">Nico Farr</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <hr class="my-4">
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+        </div>
+        <div class="col">
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://images.unsplash.com/photo-1552209841-d2dc5fd68a30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cnVubmluZ3xlbnwwfDJ8MHx8&auto=format&fit=crop&w=800&q=60" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://images.unsplash.com/photo-1576751691889-568b63882cd5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cnVubmluZ3xlbnwwfDJ8MHx8&auto=format&fit=crop&w=800&q=60" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+        </div>
+      </div>
+    </div>
+
+   </body>
 </html>
